# picturs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml  rust.yml
src/: main.rs
src/cli/: app.rs  cli.rs  constants.rs  mod.rs  validator.rs  validators.rs
src/error/: error.rs  mod.rs
src/files/: create_dir_if_not_exists.rs  mod.rs
src/iconize/: dimensions.rs  error.rs  iconize.rs  mod.rs
src/icontron/: dimensions.rs  error.rs  icontron.rs  mod.rs
src/img/: dimensions.rs  encode.rs  img.rs  mod.rs  system_icon.rs  validate.rs
