[package]
name = "picturs"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command-line utility to manipulate image files"
readme = "README.md"
repository = "https://github.com/EstebanBorai/picturs"
categories = ["command-line-utilities", "encoding", "multimedia", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
icns = "0.3.1"
image = "0.23.4"
